z-index Mobile menu fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -507,7 +507,7 @@ img {
   border-radius: 50px;
   background-color: rgba(255, 255, 255, 0.425);
   transition: all 0.3s;
-  z-index: 6;
+  z-index: 4;
 }
 
 .arrow-up-active {
